--- a/src/SCSS/components/navBar.scss
+++ b/src/SCSS/components/navBar.scss
@@ -48,7 +48,7 @@
     background-color: $themeColor;
     color: #fff;
     padding: 0.1rem 0.3rem;
-    border-radius: 5%;
+    border-radius: 0.3rem;
   }
 }
 
