--- a/src/SCSS/components/roadMapCarousel.scss
+++ b/src/SCSS/components/roadMapCarousel.scss
@@ -3,12 +3,14 @@
 @import "../helpers/mixins";
 
 .roadmap-carousel {
+  border: 1px solid red;
   width: 70%;
-  height: 50%;
+  height: 70%;
   @include flexStyle($direction: row);
 }
 
 .roadmap-carousel-left, .roadmap-carousel-right {
+  border: 1px solid black;
   img {
     width: 2rem;
     height: auto;
@@ -16,7 +18,9 @@
 }
 
 .roadmap-carousel-items {
-  flex-grow: 2;
+  border: 1px solid black;
+  width: 80%;
+  //flex-grow: 2;
   @include flexStyle($direction: row);
 
 }
