--- a/src/SCSS/components/homeProjectsList.scss
+++ b/src/SCSS/components/homeProjectsList.scss
@@ -2,19 +2,32 @@
 @import "../helpers/placeholders";
 @import "../helpers/mixins";
 
-.home-projects-list-container {
-  @include flexStyle($direction: row, $justifyContent: flex-start, $flexWrap: wrap);
+.home-projects-list {
+  width: $standardWidth * 0.7;
+  height: 80%;
+  @include flexStyle($direction: row, $justifyContent: space-between, $flexWrap: wrap);
 }
 
 .home-projects-list-item {
-  width: 30%;
-  height: 30vh;
+  width: 23%;
+  height: 30%;
   border: $standardBorder;
-  margin-right: 2rem;
-  margin-bottom: 2rem;
   border-radius: 1rem;
-  @include boxShadow(1px, 1px, 2px, 2px, #207a3c);
+  @include boxShadow(1px, 1px, 5px, 1px, #207a3c);
   @include flexStyle;
+
+  img {
+    width: 50%;
+    height: 65%;
+    margin-bottom: 5%;
+    border-radius: 1rem;
+    @include boxShadow(1px, 1px, 3px, 1px, #808080);
+  }
+
+  h3 {
+    font-family: $sans-serif;
+    font-weight: $bold;
+  } 
 }
 
 .home-projects-list-item-hover-off {
@@ -27,51 +40,35 @@
   width: 100%;
   height: 100%;
   background-color: $themeColor;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   color: #fff;
   text-align: center;
   font-family: $sans-serif;
-}
+  @include flexStyle;
 
-.home-projects-list-item-hover-on {
   h3 {
+    width: 100%;
+    height: 18%;
     @include textShadow($color: #000);
     font-size: $mediumFont;
   }
-}
 
-.home-projects-list-item-hover-on {
   h4 {
+    width: 100%;
+    height: 15%;
     font-size: $normalFont;
   } 
-}
 
-.home-projects-list-item-hover-on {
   button {
+    width: 40%;
+    height: 20%;
+    margin-top: 10%;
     @extend %button;
     background: #fff;
     @include fontStyle($family: $sans-serif, $size: 1.1rem, $weight: $bold, $color: $themeColor);
-    width: 6rem;
-    height: 3rem;
     border-radius: 0.5rem;
-    @include boxShadow(1px, 1px, 2px, 1px, #207a3c);
+    @include boxShadow(1px, 1px, 3px, 1px, #207a3c);
   }
-}
-
-.home-projects-list-item {
-  img {
-    width: 50%;
-    height: 70%;
-    margin: 1rem auto;
-    border-radius: 1rem;
-  }
-}
-
-.home-projects-list-item {
-  h3 {
-    font-family: $sans-serif;
-    font-weight: $bold;
-  } 
 }
 
 .home-projects-list-item .home-projects-list-item-hover-on,
