--- a/src/SCSS/components/about.scss
+++ b/src/SCSS/components/about.scss
@@ -5,20 +5,23 @@
 .about {
   width: $standardWidth * 0.7;
   @include flexStyle;
-  margin: 5rem 0;
-  @include fontStyle($family: $sans-serif, $size: $normalFont, $weight: $normal);
+  margin: 3% 0;
+  @include fontStyle($family: $sans-serif, $size: $normalFont, $weight: $semibold);
 }
 
 .about-desc {
+  width: 100%;
+  height: 40vh;
   @include flexStyle($direction: row, $justifyContent: space-between);
   p {
-    @include borderStyle($borderStyle: dotted);
+    @include borderStyle($borderWidth: 3px, $borderStyle: dotted);
     width: $standardWidth * 0.55;
-    padding: 2rem;
+    padding: 1.5rem;
     border-radius: 1rem;
-    line-height: 1.5rem;
+    line-height: 1.5;
+    letter-spacing: 1px;
     &::first-letter {
-      @include fontStyle($serif, $mediumFont, $bold);
+      @include fontStyle($serif, $bigFont, $bold);
     }
   }
 }
@@ -36,7 +39,15 @@
   width: $standardWidth * 0.3;
   height: $standardHeight * 0.3;
   border-radius: 0.5rem;
-  @include boxShadow(2px, 2px, 2px, 2px, #132a1a);
+  @include boxShadow(2px, 2px, 5px, 2px, #132a1a);
+
+  img {
+    width: 90%;
+    height: 80%;
+    margin-left: 5%;
+    margin-top: 5%;
+    border-radius: 0.5rem; 
+  }
 }
 
 .img-odd {
@@ -47,17 +58,15 @@
   @include transformRotate(5deg);
 }
 
-.about-desc-img img {
-  width: 90%;
-  height: 80%;
-  margin-left: 5%;
-  margin-top: 5%;
-  border-radius: 0.5rem; 
-}
-
 .about-paper-plane {
   width: 100%;
-  margin: 3rem 0 3rem 30%;
+  height: 25vh;
+  margin: 3% 0 5% 30%;
+
+  img {
+    max-width: 80%;
+    height: auto;
+  }
 }
 
 .plane-right {
@@ -66,9 +75,4 @@
 
 .plane-left {
   @include transformRotate(5deg);
-}
-
-.about-paper-plane img {
-  width: auto;
-  height: $standardHeight * 0.2;
 }
