--- a/src/SCSS/components/projects.scss
+++ b/src/SCSS/components/projects.scss
@@ -3,21 +3,10 @@
 @import "../helpers/mixins";
 
 .projects {
-  margin-top: 5rem;
-  width: 80%;
-  height: 135vh;
+  width: 90%;
+  height: 100vh;
+  margin-top: 3%;
   @include flexStyle($justifyContent: flex-start, $alignItems: null);
-}
-
-.projects {
-  h2 {
-    width: 15%;
-    padding: 0.1rem 0;
-    text-align: center;
-    @extend %h2ColorReversed;
-    border-radius: 0.3rem;
-    margin-bottom: 3rem;
-  } 
 }
 
 .projects-body {
@@ -25,28 +14,33 @@
   @include flexStyle($direction: row, $justifyContent: space-between, $alignItems: null);
 }
 
+.projects-list {
+  width: 80%;
+}
+
+// Side navigation bar style
 .side-nav-bar {
   width: 20%;
-  @include flexStyle($justifyContent: flex-start);
 }
 
 .side-nav-bar-link {
   width: 100%;
   text-decoration: none;
   color: $darkThemeColor;
-  font-weight: $normal;
+  font-weight: $semibold;
   @include flexStyle($direction: row, $justifyContent: flex-start);
-}
 
-.side-nav-bar-link {
   span {
+    margin-left: 1rem;
+    font-size: 1.3rem;
     padding: 0.6rem 0.6rem;
   }
+
   &:hover {
     text-decoration: none;
-    background: linear-gradient(to right, #4dab6a, #61D685, #bfeece);
+    background: linear-gradient(to right, #4dab6a, #61D685, #fff);
     color: #fff;
-    border-radius: 0.6rem;
+    border-radius: 1rem;
     .side-nav-bar-marker-bar {
       border-right: 2px solid #fff;
     }
@@ -54,9 +48,10 @@
       background-color: #fff;
     }
   }
+
 }
 
-.side-nav-bar-active-link {
+.active {
   color: #57c077;
   @include textShadow(1px, 1px, 1px, $color: #43955d);
   .side-nav-bar-marker-bar {
@@ -68,11 +63,6 @@
     background-color: $themeColor;
     @include boxShadow(1px, 1px, 1px, 1px, #224c2f);
   }
-}
-
-.side-nav-bar-link-name {
-  margin-left: 1rem;
-  font-size: 1.3rem;
 }
 
 /* side-nar-bar-marker */
@@ -92,17 +82,3 @@
   border-radius: 50%;
   background-color: $themeColor;
 }
-
-.projects-list {
-  width: 75%;
-  @include flexStyle($direction: row, $flexWrap: wrap);
-}
-
-.projects-list-item {
-  width: 30%;
-}
-
-.projects-list-item img {
-  width: 100%;
-}
-
