--- a/src/SCSS/components/homeProjectsCarousel.scss
+++ b/src/SCSS/components/homeProjectsCarousel.scss
@@ -63,6 +63,7 @@
 }
 
 .home-projects-carousel-item-desc {
+  background-color: #fff;
   font-size: 1.2rem;
   padding: 0.2rem 1rem;
   width: 100%;
