--- a/src/SCSS/components/projectCarousel.scss
+++ b/src/SCSS/components/projectCarousel.scss
@@ -2,25 +2,28 @@
 @import "../helpers/placeholders";
 @import "../helpers/mixins";
 
-.slides-show-container {
-  @include flexStyle($direction: row);
-}
 
 .slides-show {
-  @include flexStyle($justifyContent: space-between);
-  height: 60vh;
-  width: 90%;
-}
-.slides-show-img {
+  @include flexStyle;
   width: 80%;
-  height: 80%;
-  margin-top: 1rem;
-  border-radius: 0.5rem;
+  height: 60vh; 
+  margin: 0 auto;
+
+  img {
+    width: 80%;
+    margin-top: 3%;
+    height: auto;
+    display: block;
+    border-radius: 1rem;
+  }
 }
 
 .slides-show-desc {
   width: 100%;
-  height: 15%;
-  text-align: center;
+  height: 25%;
   margin-top: 2%;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 1rem;
+  color: #000;
 }
