--- a/src/SCSS/components/project.scss
+++ b/src/SCSS/components/project.scss
@@ -26,13 +26,7 @@
   line-height: 1.5;
   border-radius: 1rem;
   padding: 0 1rem;
-  overflow: hidden;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  &::-webkit-scrollbar { 
-    //width: 0 !important;
-    display: none; 
-  }
+  @extend %overFlow;
   @include boxShadow(1px, 1px, 2px, 1px, #8c8c8c);
 
   span {
