--- a/src/SCSS/components/homeProjectsCarousel.scss
+++ b/src/SCSS/components/homeProjectsCarousel.scss
@@ -2,13 +2,6 @@
 @import "../helpers/placeholders";
 @import "../helpers/mixins";
 
-.carousel-indicators { 
-  display: none;
-} 
-
-.home-projects-carousel-modal {
-  display: flex;
-}
 
 .carousel-modal-close-btn {
   width: 100%;
@@ -17,21 +10,31 @@
   color: #2ca952;
 }
 
+.carousel-inner {
+  background-color: #effaf2; 
+}
+
 .home-projects-carousel-item {
-  width: $standardWidth;
+  width: 80%;
   height: 80vh;
-  background: #61D685;
+  margin: 0 auto;
   @include flexStyle($justifyContent: space-around);
 }
 
+.home-project-glyphoneicon {
+  font-size: 300%;
+  font-weight: 700;
+  color: #2ca952;
+}
+
 .home-projects-carousel-item-img {
-  width: 65%;
+  width: 80%;
   height: 50%;
   @include borderStyle($borderWidth: 5px, $borderColor: #fff);
   background-color: #fff;
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  @include boxShadow(1px, 1px, 5px, 1px, #071d0e);
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  @include boxShadow(1px, 1px, 2px, 1px, #000);
 
   img {
     width: 100%; 
@@ -42,11 +45,26 @@
 .home-projects-carousel-item-info {
   width: 80%;
   height: 35%;
-  background-color: #fff;
-  font-family: $sans-serif;
   @extend %overFlow;
   @include flexStyle($justifyContent: flex-start);
-  border-radius: 1rem;
+}
+
+.home-projects-carousel-item-info-inner {
+  width: 100%;
+  height:  100%;
+  font-family: $sans-serif;
+  color: #3a804f;
+
+  .home-projects-carousel-item-desc {
+    font-size: 1.3rem;
+    padding: 0.2rem 0;
+    width: 100%;
+    font-weight: $normal;
+    @include textShadow(1px, 1px, 1px, $color: #43955d);
+    span {
+      font-weight: $bold;
+    }
+  }
 }
 
 .home-projects-carousel-item-title {
@@ -66,29 +84,8 @@
   .carousel-item-media-i {
     font-size: $normalFont;
     margin: 0.5rem 1rem 0 1rem;
-    color: #3a804f;
+    color: #1d4027;
   }
-}
-
-
-
-.home-projects-carousel-item-desc {
-  background-color: #fff;
-  font-size: 1.2rem;
-  padding: 0.2rem 1rem;
-  width: 100%;
-}
-
-.home-projects-carousel-item-desc {
-  span {
-    font-weight: $bold;
-  }
-}
-
-/*carousel left and right arrow part*/
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  opacity: 1;
 }
 
 
