--- a/src/SCSS/components/projectCarousel.scss
+++ b/src/SCSS/components/projectCarousel.scss
@@ -3,27 +3,46 @@
 @import "../helpers/mixins";
 
 
-.slides-show {
-  @include flexStyle;
-  width: 80%;
-  height: 60vh; 
+.projects-carousel-item {
+  @include flexStyle($justifyContent: space-around);
+  width: 100%;
+  height: 63vh;
+  background-color: #61D685;
   margin: 0 auto;
+  border-radius: 0.4rem;
+}
 
+.project-glyphoneicon {
+  color: #fff;
+  font-size: 300%;
+  font-weight: 700;
+}
+
+.projects-carousel-item-img {
+  width: 70%;
+  height: 70%;
+  background-color: #fff;
+  overflow: hidden;
+  border-radius: 1rem;
+  @include boxShadow(1px, 1px, 1px, null, #000);
   img {
-    width: 80%;
-    margin-top: 3%;
+    max-width: 90%;
+    margin: 1% auto;
     height: auto;
     display: block;
     border-radius: 1rem;
   }
 }
 
-.slides-show-desc {
-  width: 100%;
-  height: 25%;
-  margin-top: 2%;
-  text-align: center;
+.projects-carousel-item-info {
+  width: 70%;
+  height: 20%;
   background-color: #fff;
-  border-radius: 1rem;
   color: #000;
+  font-size: 1.2rem;
+  padding: 1% 1%;
+  border-radius: 1rem;
+  text-align: center;
+  //@include textShadow(null, null, null, $color: null);
+  @include boxShadow(1px, 1px, 1px, null, #000);
 }
