--- a/src/SCSS/components/about.scss
+++ b/src/SCSS/components/about.scss
@@ -12,12 +12,19 @@
 .about-desc {
   width: 100%;
   height: 40vh;
-  @include flexStyle($direction: row, $justifyContent: space-between);
+  @include flexStyle($direction: row, $justifyContent: space-around);
+}
+
+.p-container {
+  width: $standardWidth * 0.55;
+  max-height: 100%;
+  @extend %overFlow;
+  @include borderStyle($borderWidth: 3px, $borderStyle: dotted);
+  border-radius: 1rem;
   p {
-    @include borderStyle($borderWidth: 3px, $borderStyle: dotted);
-    width: $standardWidth * 0.55;
+    width: 100%;
+    height: 100%;
     padding: 1.5rem;
-    border-radius: 1rem;
     line-height: 1.5;
     letter-spacing: 1px;
     &::first-letter {
@@ -26,11 +33,11 @@
   }
 }
 
-.p-left {
+.left {
   @include transformRotate(-3deg);
 }
 
-.p-right {
+.right {
   @include transformRotate(3deg);
 }
 
@@ -59,12 +66,10 @@
 }
 
 .about-paper-plane {
-  width: 100%;
-  height: 25vh;
-  margin: 3% 0 5% 30%;
+  width: 70%;
 
   img {
-    max-width: 80%;
+    max-width: 100%;
     height: auto;
   }
 }
