--- a/src/SCSS/components/navBar.scss
+++ b/src/SCSS/components/navBar.scss
@@ -67,31 +67,28 @@
   }
 
   .burger-menu {
-    width: 25%;
+    width: 30%;
     height: 80%;
     display: block;
     position: relative;
-    //font-size: $mediumFont;
-    border: 1px solid red;
+    font-size: $smallFont;
 
-    .menu-icon-live {
+    .menu-icon {
       position: absolute;
       right: 0;
       top: 45%;
-    }
-
-    .menu-icon-hide {
-      position: absolute;
-      right: 0;
-      top: 45%;
-      opacity: 0;
+      width: 2.5rem;
+      height: 2.5rem;
+      padding: 0.5rem;
+      border-radius: 50%;
+      background-color: #61D685;
+      color: #fff;
     }
   }
 
   .menu-list-live {
     width: 100%;
     height: 100%;
-    border: 1px solid black;
     @include flexStyle($direction: column, $justifyContent: space-between, $alignItems: flex-start);
   }
 
