--- a/src/SCSS/components/homeProjectsList.scss
+++ b/src/SCSS/components/homeProjectsList.scss
@@ -17,7 +17,7 @@
   @include flexStyle;
 
   img {
-    width: 50%;
+    max-width: 80%;
     height: 65%;
     margin-bottom: 5%;
     border-radius: 1rem;
@@ -25,6 +25,7 @@
   }
 
   h3 {
+    text-align: center;
     font-family: $sans-serif;
     font-weight: $bold;
   } 
@@ -45,13 +46,6 @@
   text-align: center;
   font-family: $sans-serif;
   @include flexStyle;
-
-  h3 {
-    width: 100%;
-    height: 18%;
-    @include textShadow($color: #000);
-    font-size: $mediumFont;
-  }
 
   h4 {
     width: 100%;
@@ -77,5 +71,5 @@
 }
 
 .home-projects-list-item:hover .home-projects-list-item-hover-on {
-  @include flexStyle;
+  @include flexStyle($justifyContent: space-evenly);
 }
