--- a/src/SCSS/components/navBar.scss
+++ b/src/SCSS/components/navBar.scss
@@ -35,7 +35,7 @@
 .links {
   width: 30%;
   @include flexStyle($direction: row, $justifyContent: space-between);
-  font-size: $mediumFont;
+  font-size: $normalFont;
 }
 
 .link {
