--- a/src/SCSS/components/homeProjectsList.scss
+++ b/src/SCSS/components/homeProjectsList.scss
@@ -28,6 +28,7 @@
     text-align: center;
     font-family: $sans-serif;
     font-weight: $bold;
+    font-size: $normalFont;
   } 
 }
 
@@ -54,7 +55,7 @@
   } 
 
   button {
-    width: 40%;
+    width: 50%;
     height: 20%;
     margin-top: 10%;
     @extend %button;
