--- a/src/SCSS/helpers/_placeholders.scss
+++ b/src/SCSS/helpers/_placeholders.scss
@@ -8,7 +8,7 @@
   height: 55px;
   border-radius: 50%;
   display: flex;
-  background-color: #8a8a8a;
+  background-color: $themeColor;
 }
 
 %h2Color {
