--- a/src/SCSS/components/projects.scss
+++ b/src/SCSS/components/projects.scss
@@ -32,8 +32,8 @@
 
   span {
     margin-left: 1rem;
-    font-size: 1.3rem;
-    padding: 0.6rem 0.6rem;
+    font-size: $smallFont;
+    padding-left: 0.5rem;
   }
 
   &:hover {
