--- a/src/SCSS/components/roadMapCarousel.scss
+++ b/src/SCSS/components/roadMapCarousel.scss
@@ -39,7 +39,8 @@
     border-radius: 0.5rem;
     @include boxShadow(1px, 1px, 5px, 1px, #124220);
     @include fontStyle($sans-serif, null, $bold, $color: $darkThemeColor);
-    line-height: 1.5rem;
+    //line-height: 1.5rem;
+    @include flexStyle;
 
     img {
       width: 80%;
@@ -47,6 +48,21 @@
       border-radius: 0.3rem;
       margin: 5% auto;
       @include boxShadow(1px, 1px, 3px, 1px, #808080);
+    }
+
+    .card-item-title {
+      width: 100%;
+      height: 25%;
+    }
+
+    .card-item-time-line {
+      width: 100%;
+      height: 15%;
+      font-weight: 300;
+      font-size: 0.8em;
+      padding-bottom: 0.2em;
+      color: $darkThemeColor; 
+      font-family: $cursive;
     }
   }
 
