Modify Arrow-up scale ratio

--- a/src/SCSS/helpers/_placeholders.scss
+++ b/src/SCSS/helpers/_placeholders.scss
@@ -4,8 +4,8 @@
   position: fixed;
   bottom: 50px;
   right: 50px;
-  width: 55px;
-  height: 55px;
+  width: 3.5rem;
+  height: 3.5rem;
   border-radius: 50%;
   display: flex;
   background-color: $themeColor;
