--- a/src/SCSS/components/project.scss
+++ b/src/SCSS/components/project.scss
@@ -22,7 +22,7 @@
   height: 22%;
   width: 80%;
   font-family: $sans-serif;
-  font-size: $smallFont;
+  font-size: $xSmallFont;
   line-height: 1.4;
   border-radius: 1rem;
   padding: 0 1rem;
